--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Jekk Tales</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>Jekk Tales</h1>
+<p>Jekk slowly roams around an empty field as one of his activities.</p>
 
 </body>
 </html>
