--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 
 <h1>Jekk Tales</h1>
 <p>Jekk slowly roams around an empty field as one of his activities.</p>
-
+<br>
+  <p>Jekk stumbles on a rock while he was exploring.</p>
+  <br>
+  <p>Jekk destroys rock as because it was imperfect to exist.</p>
+  <br>
+  <p>After Jekk destroys the imperfect rock, he continues to roam around the vast empty field when he stumbles a mysterious stranger.</p>
+  <br>
+  <p>The stranger asks Jekk, "Do you want a rock?". Jekk is filled with hatred because the rock the stranger was holding was imperfect as well</p>
+  <br>
+  <p>Jekk proceeds to eat the stranger as the stranger shows him the rock that Jekk thinks, "Imperfect is a sin". The End.</p>
 </body>
 </html>
