--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
   <p>The stranger asks Jekk, "Do you want a rock?". Jekk is filled with hatred because the rock the stranger was holding was imperfect as well</p>
   <br>
   <p>Jekk proceeds to eat the stranger as the stranger shows him the rock that Jekk thinks, "Imperfect is a sin". The End.</p>
+  <img src="Jekk1.JPG" width="500" height="600"> 
+  <a href="p2.html">Click here to continue.</a>
 </body>
 </html>
