--- a/p6.html
+++ b/p6.html
@@ -8,6 +8,6 @@
 <h1>Jekk Tales</h1>
 <p>Jekk proceeds to eat the stranger as the stranger shows him the rock that Jekk thinks, "Imperfect is a sin". The End.</p>
 <img src="Jekk6.JPG" width="500" height="600">
-<a href="p6.html">Click here to continue.</a>
+<a href="p6.html">Click here to go back to the beginning.</a>
 </body>
 </html>
